# xmemhash

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  citation.bib  justfile
src/: algo.rs  archive.rs  display.rs  file.rs  hash.rs  main.rs  recurse.rs  sevenzip.rs  tree.rs  zip.rs
src/decompress/: gzip.rs  mod.rs  rar.rs  sevenzip.rs  tar.rs  tarball.rs  zip.rs
tests/: e2e.sh
