[package]
name = "xmemhash"
version = "1.3.0"
edition = "2021"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "wrap_help", "derive"] }
digest = "0.10.7"
infer = "0.16.0"
md-5 = "0.10.6"
rpassword = "7.3.1"
sevenz-rust = { version = "0.6.1", features = ["aes256"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
tabular = "0.2.0"
zip = "2.2.0"
