[package]
name = "xmemhash"
version = "1.4.2"
edition = "2024"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "wrap_help", "derive"] }
digest = "0.10.7"
flate2 = "1.0.34"
infer = "0.16.0"
md-5 = "0.10.6"
rpassword = "7.3.1"
sevenz-rust = { version = "0.6.1", features = ["aes256"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tabular = "0.2.0"
tar = "0.4.42"
zip = "2.2.0"
